# docs/swagger.json
@@ -61,25 +61,6 @@
                 }
             }
         },
-        "/alunos/{cpf}": {
-            "get": {
-                "description": "Realiza uma busca baseada pelo CPF",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Alunos"
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/models.Aluno"
-                        }
-                    }
-                }
-            }
-        },
         "/alunos/{id}": {
             "get": {
                 "description": "Realiza uma busca baseada pelo ID",
@@ -138,132 +119,21 @@
                 }
             }
         },
-        "/patient": {
+        "/alunos/{nome}": {
             "get": {
-                "description": "Exibe todos os pacientes",
+                "description": "Realiza uma busca baseada pelo Nome",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
-                    "Patient"
+                    "Alunos"
                 ],
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/models.Patient"
-                            }
+                            "$ref": "#/definitions/models.Aluno"
                         }
-                    }
-                }
-            },
-            "post": {
-                "description": "Cadastra um novo paciente",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Patient"
-                ],
-                "parameters": [
-                    {
-                        "description": "Patient object",
-                        "name": "patient",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/models.Patient"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/models.Patient"
-                            }
-                        }
-                    }
-                }
-            }
-        },
-        "/patient/{cpf}": {
-            "get": {
-                "description": "Realiza uma busca baseada pelo CPF",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Patient"
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/models.Patient"
-                        }
-                    }
-                }
-            }
-        },
-        "/patient/{id}": {
-            "get": {
-                "description": "Realiza uma busca baseada pelo ID",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Patient"
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/models.Patient"
-                        }
-                    }
-                }
-            },
-            "delete": {
-                "description": "Realiza uma busca baseada pelo ID",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Patient"
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK"
-                    }
-                }
-            },
-            "patch": {
-                "description": "Realiza uma edição baseada pelo ID",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Patient"
-                ],
-                "parameters": [
-                    {
-                        "description": "Patient object",
-                        "name": "patient",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/models.Patient"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK"
                     }
                 }
             }
@@ -285,10 +155,10 @@
         "models.Aluno": {
             "type": "object",
             "properties": {
-                "cpf": {
+                "createdAt": {
                     "type": "string"
                 },
-                "createdAt": {
+                "data_nascimento": {
                     "type": "string"
                 },
                 "deletedAt": {
@@ -300,40 +170,14 @@
                 "nome": {
                     "type": "string"
                 },
-                "rg": {
-                    "type": "string"
-                },
-                "updatedAt": {
-                    "type": "string"
-                }
-            }
-        },
-        "models.Patient": {
-            "type": "object",
-            "properties": {
-                "city": {
-                    "type": "string"
-                },
-                "cpf": {
-                    "type": "string"
-                },
-                "createdAt": {
-                    "type": "string"
-                },
-                "deletedAt": {
-                    "$ref": "#/definitions/gorm.DeletedAt"
-                },
-                "description": {
-                    "type": "string"
-                },
-                "id": {
+                "turma_id": {
                     "type": "integer"
                 },
-                "name": {
-                    "type": "string"
-                },
                 "updatedAt": {
                     "type": "string"
+                },
+                "user_id": {
+                    "type": "integer"
                 }
             }
         }
